--- a/index.html
+++ b/index.html
@@ -60,11 +60,19 @@
               class="mail"
               href="mailto:info@devstudio.com"
               rel="noopeper noreforrer nofollow"
-              >info@devstudio.com</a
-            >
+              ><svg class="envelope" width="16" height="12">
+                <use href="./img/icons.svg#icon-envelope"></use>
+              </svg>
+              <span style="vertical-align: inherit">info@devstudio.com</span>
+            </a>
           </li>
           <li class="item">
-            <a class="tel" href="tel:+380961111111">+380 96 111 11 11</a>
+            <a class="tel" href="tel:+380961111111">
+              <svg class="smartphone" width="10" height="16">
+                <use href="./img/icons.svg#icon-smartphone"></use>
+              </svg>
+              <span>+380 96 111 11 11</span></a
+            >
           </li>
         </ul>
       </div>
